--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@
     width: 100%;
     max-width: 100vw;
     height: 50vh;
-    background-color: lightskyblue;
+    background-color:rgb(171, 80, 6);
     border: 4px solid var(--colorwhite);
 }
 .inforation {
@@ -40,7 +40,7 @@ h1 {
     display: flex;
     flex-direction: column;
     background-color: lightgray;
-    color: rgb(171, 80, 6);
+    color: var(--colorwhite);
     border: 4px solid var(--colorwhite);
     width: 60vw;
     height: 250px;
@@ -67,7 +67,7 @@ img {
     flex-direction: column;
     width: 100%;
     max-width: 100vw;
-    background-color: lightskyblue;
+    background-color: rgb(171, 80, 6);
     border: 4px solid var(--colorwhite);
     border-radius: 15px;
 }
@@ -79,18 +79,19 @@ h5 {
     padding: 10px 10px;
 }
 p {
-    color: rgb(171, 80, 6);
+    color: var(--colorwhite;
     padding: 10px 10px;
-    text-shadow: white;
+    text-shadow: lightgray;
 }
 #footer {
     display: flex;
     justify-content: center;
     width: 100%;
     max-width: 100vw;
-    background-color: lightskyblue;
+    background-color:rgb(171, 80, 6);
     border: 4px solid var(--colorwhite);
     padding: 10px 10px;
     border-radius: 15px;
-    color:rgb(171, 80, 6);
+    color:var(--colorwhite);
+
 }
