--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    height: 100%;
 }
 :root {
     --colorwhite: white;
@@ -14,37 +13,43 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    max-width: 100vw;
     background-color: lightgray;
     border-radius: 20px;
     border: 4px solid var(--colorgray);
-    margin: 0;
+    font-size: clamp(1rem, 1.5vw, 4em);
+    margin: auto;
 }
 #header {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
     width: 100%;
     max-width: 100vw;
-    height: 50vh;
-    background-color:rgb(171, 80, 6);
+    background-color: rgb(172, 128, 137);
     border: 4px solid var(--colorwhite);
+    padding: 10px 10px;
 }
 .inforation {
     display: flex;
-    justify-content:space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-items: center;
     width: 100%;
-    max-width: 100vw;
-    height: 500px;
 }
 h1 {
     display: flex;
     flex-direction: column;
-    background-color: lightgray;
+    justify-content: center;
+    align-items: center;
+    background-color: skyblue;
     color: var(--colorwhite);
     border: 4px solid var(--colorwhite);
-    width: 60vw;
-    height: 250px;
-    margin: 10px 10px;
+    width: 100%;
+    max-width: 100vw;
     padding: 10px 10px;
     font-size: large;
 
@@ -53,6 +58,7 @@ h1 {
     color:var(--colorwhite);
     font-size: large;
    } 
+
 }
 img {
     width: 260px;
@@ -67,31 +73,85 @@ img {
     flex-direction: column;
     width: 100%;
     max-width: 100vw;
-    background-color: rgb(171, 80, 6);
+    background-color: rgb(172, 128, 137);
     border: 4px solid var(--colorwhite);
     border-radius: 15px;
 }
 h5 {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: flex-start;
     color: var(--colorwhite);
     font-size: larger;
     padding: 10px 10px;
 }
 p {
-    color: var(--colorwhite;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    color: var(--colorwhite);
     padding: 10px 10px;
     text-shadow: lightgray;
+
 }
 #footer {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     width: 100%;
     max-width: 100vw;
-    background-color:rgb(171, 80, 6);
+    background-color: rgb(172, 128, 137);
     border: 4px solid var(--colorwhite);
-    padding: 10px 10px;
+    padding: 20px 10px;
     border-radius: 15px;
     color:var(--colorwhite);
-
 }
+@media screen and (max-width:600px) {
+    #container {
+        display: flex;
+        width: 100%;
+        max-width: 100%;
+        font-size: clamp(8px, 1rem, 2em);
+        flex-direction: column;
+        align-items: center;}
+        #main, #footer, #header, .inforation, h1, p, h5 {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
+        img {
+            width: 100px;
+        } 
+    }
+    @media screen and (min-width:601px) and (max-width:900px) {
+    #container {
+        display: flex;
+        width: 100%;
+        max-width: 100%;
+        font-size: clamp(8px, 1rem, 2em);
+        flex-direction: column;
+        align-items: center;}
+        #main, #footer, #header, .inforation, h1, p, h5 {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            font-size: medium;
+            width: 100%;
+        }
+        img {
+            width: 100px;
+        } 
+    }
+    @media screen and (max-width:600px) and (min-width:901px) {
+    #container {
+    display: flex;
+    flex-direction: column;
+     }
+     #header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    } 
+    } 
+    
