Refactor CSS for improved structure and readability

--- a/css/index.css
+++ b/css/index.css
@@ -97,8 +97,9 @@ p {
 }
 #footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    text-align: center;
     width: 100%;
     max-width: 100vw;
     background-color: rgb(172, 128, 137);
@@ -106,6 +107,12 @@ p {
     padding: 20px 10px;
     border-radius: 15px;
     color:var(--colorwhite);
+    padding: 10px;
+}
+.home a {
+    color: skyblue;
+    text-decoration: none;
+    font-size: larger;
 }
 @media screen and (max-width:600px) {
     #container {
@@ -155,3 +162,4 @@ p {
     } 
     } 
     
+
