--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -29,7 +28,7 @@
     flex-wrap: wrap;
     width: 100%;
     max-width: 100vw;
-    background-color: rgb(172, 128, 137);
+    background-color: skyblue;
     border: 4px solid var(--colorwhite);
     padding: 10px 10px;
 }
@@ -46,8 +45,8 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: skyblue;
-    color: var(--colorwhite);
+    background-color: var(--colorwhite);
+    color: var(--colorblack);
     border: 4px solid var(--colorwhite);
     width: 100%;
     max-width: 100vw;
@@ -56,10 +55,9 @@ h1 {
 
    a {
     text-decoration: none;
-    color:var(--colorwhite);
+    color:var(--colorblack);
     font-size: large;
    } 
-
 }
 img {
     width: 260px;
@@ -74,7 +72,7 @@ img {
     flex-direction: column;
     width: 100%;
     max-width: 100vw;
-    background-color: rgb(172, 128, 137);
+    background-color: white;
     border: 4px solid var(--colorwhite);
     border-radius: 15px;
 }
@@ -83,7 +81,7 @@ h5 {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-start;
-    color: var(--colorwhite);
+    color: var(--colorblack);
     font-size: larger;
     padding: 10px 10px;
 }
@@ -91,30 +89,38 @@ p {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    color: var(--colorwhite);
+    color: var(--colorblack);
     padding: 10px 10px;
-    text-shadow: lightgray;
+    text-shadow: 2px 2px 5px 2px skyblue;
 
 }
 #footer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     text-align: center;
     width: 100%;
     max-width: 100vw;
-    background-color: rgb(172, 128, 137);
+    background-color: skyblue;
     border: 4px solid var(--colorwhite);
     padding: 20px 10px;
     border-radius: 15px;
     color:var(--colorwhite);
-    padding: 10px;
+    padding: 20px;
+    gap: 30px
+
 }
 a {
-    color: skyblue;
+    color: var(--colorwhite);
     text-decoration: none;
     font-size: larger;
+    padding: 20PX;
 }
+a:hover {
+    font-size: x-large;
+    box-shadow: 2px 2px 5px 2px white;
+}
+
 
 @media screen and (max-width:600px) {
     #container {
@@ -131,6 +137,8 @@ a {
         }
         img {
             width: 100px;
+            height: auto;
+
         } 
     }
     @media screen and (min-width:601px) and (max-width:900px) {
@@ -149,7 +157,8 @@ a {
             width: 100%;
         }
         img {
-            width: 100px;
+            width: 200px;
+            height: auto;
         } 
     }
     @media screen and (max-width:600px) and (min-width:901px) {
@@ -163,4 +172,5 @@ a {
     flex-wrap: wrap;
     } 
     } 
+
 
